--- a/bgpctl/Makefile
+++ b/bgpctl/Makefile
@@ -1,9 +1,9 @@
-#	$OpenBSD: Makefile,v 1.11 2010/05/26 16:44:32 nicm Exp $
+#	$OpenBSD: Makefile,v 1.14 2018/07/13 15:02:40 jsg Exp $
 
 .PATH:		${.CURDIR}/../bgpd
 
 PROG=	bgpctl
-SRCS=	bgpctl.c parser.c util.c timer.c
+SRCS=	bgpctl.c parser.c util.c
 SRCS+=	irrfilter.c whois.c irr_asset.c irr_prefix.c irr_output.c
 SRCS+=	irr_parser.c mrtparser.c
 CFLAGS+= -Wall
@@ -13,7 +13,7 @@ CFLAGS+= -Wshadow -Wpointer-arith -Wcast-qual
 CFLAGS+= -Wsign-compare
 CFLAGS+= -I${.CURDIR} -I${.CURDIR}/../bgpd
 MAN=	bgpctl.8
-LDADD= -lutil
-DPADD+= ${LIBUTIL}
+LDADD= -lutil -lm
+DPADD+= ${LIBUTIL} ${LIBM}
 
 .include <bsd.prog.mk>
